objects/Affiliate_Event__c.object
<CustomObject>
    <label>Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAL Onboarding</fullName>
                </value>
                <value>
                    <fullName>ARMS PelvicSim</fullName>
                </value>
                <value>
                    <fullName>Joint Providership Activity</fullName>
                </value>
                <value>
                    <fullName>Affiliate Visit by ARMS&apos;s CEO</fullName>
                </value>
                <value>
                    <fullName>Contract Review Request</fullName>
                </value>
                <value>
                    <fullName>RQPS Consulting</fullName>
                </value>
                <value>
                    <fullName>Affiliate Invoicing and Payment</fullName>
                </value>
                <value>
                    <fullName>Certificate Request - Insurance</fullName>
                </value>
                <value>
                    <fullName>Provider Background Verification</fullName>
                </value>
                <value>
                    <fullName>TeamSTEPPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_ARMS_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary ARMS Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Affiliate_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Num_of_Completed_Action_Items__c</fullName>
        <label># of Completed Action Items</label>
        <summaryFilterItems>
            <field>Affiliate_Event_Action__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Affiliate_Event_Action__c.Affiliate_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>